--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -344,11 +344,11 @@ nav a:hover::after {
 
 @keyframes slideInBottom {
     from {
-        transform: translateY(100%);
+        transform: translate(-50%, 100%);
         opacity: 0;
     }
     to {
-        transform: translateY(0);
+        transform: translate(-50%, 0);
         opacity: 1;
     }
 }
